# conan-zlib

./: .gitignore  .travis.yml  AppVeyorInstall.bat  AppVeyorTest.bat  CMakeLists.patch  CMakeLists.txt  CMakeLists_minizip.txt  FindZLIB.cmake  LICENSE  README.md  appveyor.yml  build.py  build_with_docker.py  conanfile.py
.travis/: install.sh
test/: CMakeLists.txt  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  test.c  test_minizip.c  test_package.c
